fixed small bug of mission__row--video alignment

--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -54,80 +54,3 @@ body {
   margin: 0.3rem 0;
   transition: all 0.3s ease;
 }
-
-/********************************/
-/****** MISSION PAGE STYLE ******/
-/********************************/
-
-.mission__grid {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  padding: 5rem 10rem;
-}
-
-.mission__row {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  text-align: left;
-}
-
-.mission__row.reverse-row {
-  grid-template-columns: 1fr 1fr;
-  grid-template-areas: "text img";
-  text-align: right;
-}
-
-.mission__row.reverse-row .mission__text {
-  grid-area: text;
-}
-
-.mission__row.reverse-row .mission__img {
-  grid-area: img;
-}
-
-.mission__img {
-  width: 45rem;
-  height: auto;
-  align-items: end;
-}
-
-.mission__text--one {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  justify-self: left;
-  text-align: left;
-}
-.mission__text--two {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  justify-self: right;
-  text-align: left;
-}
-
-.grid__heading,
-.grid__text {
-  margin-bottom: 1.5rem;
-}
-
-.grid__heading {
-  font-size: 4.4rem;
-}
-
-.grid__text {
-  font-size: 1.6rem;
-}
-.img__one,
-.img__three,
-.img__five {
-  justify-self: right;
-  margin-right: 4rem;
-}
-.img__two,
-.img__four,
-.img__six {
-  margin-left: 4rem;
-}
